--- a/App2.csproj
+++ b/App2.csproj
@@ -40,6 +40,7 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.251003001" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Assets\Icons\" />
     <Folder Include="models\" />
     <Folder Include="Services\" />
     <Folder Include="ViewModels\" />
