feat: 集成 PAC 模式并优化代理服务
- 新增 PAC 模式支持，通过本地 HTTP 服务器托管 PAC 文件，实现自动代理配置。
- 在 `PACServerService` 中实现 PAC 文件生成和请求处理逻辑。
- 更新 `ProxyService` 以支持 PAC URL 设置，并在切换代理模式时自动管理 PAC 服务器状态。
- 在 `MainWindowViewModel` 中集成 PAC 服务器的启动和停止逻辑，确保用户界面与 PAC 模式的交互流畅。
- 新增 PAC 模式使用说明和诊断指南文档，提供用户操作指导和故障排查步骤。

主要更改涉及 `Services`、`ViewModels` 和文档文件，确保编译成功，无错误和警告。

--- a/App2.csproj
+++ b/App2.csproj
@@ -71,6 +71,12 @@
       <!-- 单项目 MSIX 打包：确保被写入安装包资源 -->
       <PackagePath>Assets\engine\</PackagePath>
     </None>
+    <None Include="pac.txt">
+      <!-- 非打包运行（bin\...）需要 -->
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <!-- dotnet publish 需要 -->
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
