feat: 更新项目配置和主窗口逻辑
- 更新 `Microsoft.Windows.SDK.BuildTools` 版本至 10.0.26100.6901，并新增 `WinUIEx` 包以支持系统托盘功能。
- 在 `MainWindow.xaml.cs` 中实现系统托盘图标和右键菜单功能，增强用户交互体验。
- 修改 `MainWindowViewModel` 中的清理逻辑为异步，确保 PAC 服务器停止后再进行清理。
- 更新 `App2.csproj` 文件，添加应用程序图标和相关内容项。

确保项目编译成功，无错误和警告。

--- a/App2.csproj
+++ b/App2.csproj
@@ -36,11 +36,11 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.6584" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.6901" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.251003001" />
+    <PackageReference Include="WinUIEx" Version="2.9.0" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Assets\Icons\" />
     <Folder Include="models\" />
     <Folder Include="Services\" />
     <Folder Include="ViewModels\" />
@@ -60,7 +60,8 @@
     <PublishReadyToRun Condition="'$(Configuration)' == 'Debug'">False</PublishReadyToRun>
     <PublishReadyToRun Condition="'$(Configuration)' != 'Debug'">True</PublishReadyToRun>
     <PublishTrimmed Condition="'$(Configuration)' == 'Debug'">False</PublishTrimmed>
-    <PublishTrimmed Condition="'$(Configuration)' != 'Debug'">True</PublishTrimmed>
+    <PublishTrimmed Condition="'$(Configuration)' != 'Debug'">False</PublishTrimmed>
+    <ApplicationIcon>Assets\Icons\output.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <None Include="Assets\engine\sslocal.exe">
@@ -77,6 +78,12 @@
       <!-- dotnet publish 需要 -->
       <CopyToPublishDirectory>Always</CopyToPublishDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Assets\Icons\output.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
