feat: 增强路由模式功能与配置管理
- 在 `MainWindow.xaml` 中新增路由模式徽章，显示当前路由状态（绕过大陆或全局路由）。
- 更新 `MainWindowViewModel`，添加对路由模式的支持，允许用户在全局模式和绕过大陆模式之间切换。
- 修改 `ConfigWriter` 以支持可选的 ACL 文件路径，增强配置灵活性。
- 新增 `shadowsocks.acl` 文件，提供默认的 ACL 规则。
- 更新 `.gitignore`，忽略发布配置文件。

确保项目编译成功，无错误和警告。

--- a/App2.csproj
+++ b/App2.csproj
@@ -78,6 +78,11 @@
       <!-- dotnet publish 需要 -->
       <CopyToPublishDirectory>Always</CopyToPublishDirectory>
     </None>
+    <None Include="shadowsocks.acl">
+      <!-- ACL 文件：用于全局模式的直连规则 -->
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
