--- a/App2.csproj
+++ b/App2.csproj
@@ -44,6 +44,7 @@
     <Folder Include="models\" />
     <Folder Include="Services\" />
     <Folder Include="ViewModels\" />
+    <Folder Include="Views\" />
   </ItemGroup>
 
   <!--
